<resources>
    <string name="app_name">AquaticApp</string>
    <string name="quote">Easy Way To Note Your Tasks</string>
    <string name="today">Today Plans</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>