<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".loginFragment.LoginFragment">

        <RelativeLayout
            android:background="@color/green_light_color"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_marginTop="@dimen/dp16"
                android:layout_centerHorizontal="true"
                android:id="@+id/imLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo_temp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.Aquatic.Title"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/imLogo"
                android:layout_marginTop="@dimen/dp16"
                android:text="@string/app_name" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@id/tvTitle"
                android:layout_centerHorizontal="true"
                android:padding="@dimen/dp24"
                android:layout_marginTop="@dimen/dp64">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp4"
                    style="@style/Widget.Aquatic.TextInputLayout"
                    app:errorEnabled="true"
                    app:errorTextColor="@color/red_light_color"
                    android:hint="@string/user_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp4"
                    style="@style/Widget.Aquatic.TextInputLayout"
                    android:id="@+id/txtInput_password"
                    app:errorEnabled="true"
                    app:errorTextColor="@color/red_light_color"
                    android:hint="@string/password">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/edt_password"
                        android:inputType="textPassword"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp32">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_next"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Widget.Aquatic.Button"
                        android:text="next"
                        android:layout_alignParentEnd="true" />

                    <com.google.android.material.button.MaterialButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="cancel"
                        android:layout_marginEnd="@dimen/dp16"
                        style="@style/Widget.Aquatic.TextButton"
                        android:layout_toLeftOf="@id/btn_next"
                        android:id="@+id/btn_cancel" />
                </RelativeLayout>

            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:layout_marginTop="@dimen/dp32"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="@dimen/dp16"
                android:layout_marginBottom="@dimen/dp16" />

        </RelativeLayout>

    </FrameLayout>
</layout>